# toml-parser

./: .gitignore  CMakeLists.txt  README.md  spec.url
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
include/: test.hpp
src/: CMakeLists.txt  main.c  main.cpp  test.cpp
test/: CMakeLists.txt  CuTest.c  testmain.c
